fix(skill-evolution): preserve JSON nulls in payload lists